--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "history": "^1.17.0",
     "humps": "^0.6.0",
+    "immutability-helper": "^2.6.2",
     "immutable": "^3.8.1",
     "localforage": "^1.5.5",
     "lodash": "^3.10.1",
@@ -61,6 +62,7 @@
     "normalizr": "^1.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^15.4.2",
     "react-helmet": "^5.1.3",
     "react-redux": "^5.0.5",
