--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
     "babel-eslint": "^7.2.1",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-rewire": "^1.0.0-beta-5",
+    "babel-plugin-transform-function-bind": "^6.22.0",
+    "babel-preset-stage-2": "^6.24.1",
     "chai": "^3.3.0",
     "chai-as-promised": "^5.1.0",
     "chokidar": "^1.6.1",
