--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "version": "0.0.0",
   "description": "Universal Redux Template",
   "scripts": {
-    "lint": "eslint app bin",
     "start": "cross-env NODE_PATH=./app concurrently --kill-others \"node app/backend\" \"gulp css:watch\"",
-    "test:prebuild": "./bin/test-prebuild",
-    "test:watch": "yarn run test:prebuild; yarn run test:babelwatch",
-    "test:babelwatch": "NODE_ENV=test babel app --out-dir .babel-test-build --source-maps --watch --ignore app/assets app/styles app/backend  --skip-initial-build",
-    "test": "./bin/test",
-    "test:ci": "yarn run test:prebuild; yarn test",
-    "webpack": "webpack",
     "build": "rimraf dist/ && npm run webpack && gulp build",
-    "postinstall": "npm run build"
+    "lint": "esw webpack.config.* app/frontend app/backend --color",
+    "lint:fix": "esw webpack.config.* app/frontend app/backend --color --fix",
+    "lint:watch": "npm run lint -- --watch",
+    "postinstall": "npm run build",
+    "test": "mocha --compilers js:babel-register 'app/**/*.test.js'",
+    "webpack": "webpack"
   },
   "engines": {
     "node": "6.1.0",
@@ -55,7 +53,7 @@
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "history": "^1.17.0",
-    "humps": "^0.6.0",
+    "humps": "^2.0.1",
     "immutability-helper": "^2.6.2",
     "immutable": "^3.8.1",
     "localforage": "^1.5.5",
@@ -89,23 +87,26 @@
     "babel-eslint": "^7.2.1",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-rewire": "^1.0.0-beta-5",
-    "chai": "^3.3.0",
-    "chai-as-promised": "^5.1.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "chokidar": "^1.6.1",
     "dotenv": "^4.0.0",
     "enzyme": "^2.3.0",
-    "eslint": "^3.18.0",
+    "eslint": "^4.15.0",
+    "eslint-config-google": "^0.9.1",
     "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-react": "^6.0.0",
-    "jsdom": "^7.0.1",
+    "eslint-watch": "^3.1.3",
+    "jsdom": "^11.5.1",
     "md5-file": "^3.1.1",
-    "mocha": "^2.4.5",
-    "nock": "^2.17.0",
+    "mocha": "^4.1.0",
+    "nock": "^9.1.3",
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^1.3.1",
+    "react-immutable-proptypes": "^2.1.0",
     "rewire-webpack": "^1.0.0",
-    "sinon": "^1.17.1",
-    "sinon-chai": "^2.8.0",
+    "sinon": "^4.1.4",
+    "sinon-chai": "^2.14.0",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0"
   }
